[b][color=orange]v3.09[/color], 01.10.2017[/b][list]
[*]Fix a lua error after reload in the BigWigs skin.
[*]Add korean locale file.
[*]Adjust Orderhall Commandbar skin.
[*]Update ObjectiveTracker skin.
[*]Update filterPriority in install.
[*]Add a skin for the RaidFrame.
[*]Add a new tags "health-current-mUI" shows 2 diggets; "power:current-mUI" shows power if 0 instead of hiding it.
[*]Adjust the size for the Notifications frame.
[*]Remove OzCooldowns, since the original AddOn is working now.[/list]

[b][color=orange]v3.08[/color], 06.09.2017[/b][list]
[*]Add new filterPriority to install.
[*]Add a new texture.
[*]Add some spell to OzCooldowns.
[*]Fix spellRewards frame in Quest skin.
[*]Update SplashScreen Logo.[/list]

[b][color=orange]v3.07[/color], 31.08.2017[/b][list]
[*]Update install with new filterPriority.
[*]Add the possibility to change the duration text on the Nameplate auras.
[*]Fix errors with PlaySound API.
[*]Increase the size of the Orderhall Commandbar.[/list]

[b][color=orange]v3.06[/color], 29.08.2017[/b][list]
[*]Implement OzCooldowns - Credits Infinitron
[*]Add a new Logo. Thx RZ_Digital
[*]Some layout adjustments.
[*]Add Namplateaura Filter - Credits Infinitron.
[*]Fix a error in AFK screen.
[*]Works with Patch 7.2.5 & 7.3.[/list]

[b][color=orange]v3.05[/color], 17.08.2017[/b][list]
[*]Remove the texture from the ObjectiveTracker Skin.
[*]Fix an error in WeakAura Skin.
[*]Some layout adjustments.
[*]Add a style for the ActionBars Buttons (Like Masque) -- Credits Infinitron for the code permission.
[*]Add compatibily with or without ParchementRemover from AddOnSkins.
[*]Add a QuestCounter on the WorldMap.[/list]

[b][color=orange]v3.04[/color], 09.08.2017[/b][list]
[*]Set the font in the install step messages.
[*]Change the S&L Datatext (Friend, Guild) to use text instead of the icon.
[*]Fix Pet castbar position.
[*]Change the castbar to be default, not transparent.
[*]Fix a error with version check if the SplashScreen is disabled.[/list]
