@@ -15,19 +15,17 @@ local CLOSE = CLOSE
 -- Global variables that we don't cache, list them here for the mikk's Find Globals script
 -- GLOBALS: MERData, UISpecialFrames, MerathilisUIChangeLog, DISABLED_FONT_COLOR
 
-
 local ChangeLogData = {
 	"Changes:",
-		"• Fix a lua error after reload in the BigWigs skin.",
-		"• Add korean locale file.",
-		"• Adjust Orderhall Commandbar skin.",
-		"• Update ObjectiveTracker skin.",
-		"• Update filterPriority in install.",
-		"• Add a skin for the RaidFrame.",
-		"• Add a new tags 'health-current-mUI' shows 2 diggets; 'power:current-mUI'",
-		"•   shows power if 0 instead of hiding it.",
-		"• Adjust the size for the Notifications frame.",
-		"• Remove OzCooldowns, since the original AddOn is working now.",
+		"• Change the frame strate for the locPanel & Notifications.",
+		"• Add QuickJoinNotifications to my Notifications.",
+		"• Add SpeedyLoad.",
+		"• Massive Cleanup.",
+		"• Added some new skins & updated some skins.",
+		"• Add new tag: mUI-resting.",
+		"• Updated Expressway & Roboto-Black font.",
+		"• Small layout adjustments for v2.",
+		"• Use an own texture for the MailIcon.",
 		-- "• ",
 	" ",
 	"Notes:",
